Fix SingleThumb.scss styles calculate the output spacing

--- a/polaris-react/src/components/RangeSlider/components/SingleThumb/SingleThumb.scss
+++ b/polaris-react/src/components/RangeSlider/components/SingleThumb/SingleThumb.scss
@@ -264,7 +264,7 @@ $range-output-translate-x: calc(
     visibility: visible;
     // stylelint-disable -- polaris/layout/declaration-property-value-disallowed-list, polaris/conventions/polaris/custom-property-allowed-list -- generated by polaris-migrator DO NOT COPY
     bottom: calc(
-      var(--pc-range-slider-thumb-size) + var(--p-range-slider-thumb-size-active) - var(--p-range-slider-thumb-size-base)
+      var(--pc-range-slider-thumb-size) + #{$range-thumb-size-difference}
     );
     // stylelint-enable -- polaris/layout/declaration-property-value-disallowed-list, polaris/conventions/polaris/custom-property-allowed-list
   }
